--- a/app/src/main/res/layout-w592dp-v21/activity_detail.xml
+++ b/app/src/main/res/layout-w592dp-v21/activity_detail.xml
@@ -78,21 +78,15 @@
 
         <TextView
             android:id="@+id/textViewRatingTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailSectionTitleTheme"
             android:layout_marginLeft="24dp"
             android:layout_marginStart="24dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingEnd="2dp"
             android:paddingRight="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_rating"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toRightOf="@+id/imageViewOnesheet"
@@ -112,11 +106,8 @@
 
         <TextView
             android:id="@+id/textViewOutOfTen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailsNormalStatsTheme"
             android:text="@string/detail_out_of_10"
-            android:textColor="@color/white_translucent"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
             android:paddingTop="16dp"
             app:layout_constraintLeft_toRightOf="@+id/textViewRating"
             app:layout_constraintTop_toTopOf="@+id/textViewRating"
@@ -127,20 +118,14 @@
 
         <TextView
             android:id="@+id/textViewRuntimeTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailSectionTitleTheme"
             android:layout_marginTop="0dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingEnd="2dp"
             android:paddingRight="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_runtime"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toRightOf="@+id/textViewOutOfTen"
@@ -152,30 +137,21 @@
 
         <TextView
             android:id="@+id/textViewRuntime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailsNormalStatsTheme"
             tools:text="141 min"
-            android:textColor="@color/white_translucent"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRuntimeTitle"
             app:layout_constraintTop_toBottomOf="@+id/textViewRuntimeTitle" />
 
         <TextView
             android:id="@+id/textViewReleaseTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailSectionTitleTheme"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingEnd="2dp"
             android:paddingRight="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_release"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRuntime"
@@ -185,31 +161,21 @@
 
         <TextView
             android:id="@+id/textViewRelease"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailsNormalStatsTheme"
             tools:text="2017"
-            android:textColor="@color/white_translucent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewReleaseTitle"
             app:layout_constraintTop_toBottomOf="@+id/textViewReleaseTitle" />
 
         <TextView
             android:id="@+id/textViewSynopsisTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailSectionTitleTheme"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingRight="8dp"
             android:paddingEnd="8dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_synopsis"
-            android:textAllCaps="false"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
@@ -239,21 +205,14 @@
 
         <TextView
             android:id="@+id/textViewReviewsTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailSectionTitleTheme"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             android:paddingEnd="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_reviews"
-            android:textAllCaps="true"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
@@ -278,12 +237,8 @@
         <!-- RecyclerView will be gone if empty and this will be visible and vice versa -->
         <TextView
             android:id="@+id/tv_review_empty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
+            style="@style/TextDetailsEmptyTheme"
             android:visibility="visible"
-            android:textColor="@color/white_translucent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintTop_toBottomOf="@+id/textViewReviewsTitle"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
             app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
@@ -293,22 +248,15 @@
 
         <TextView
             android:id="@+id/textViewMediaTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/TextDetailSectionTitleTheme"
             app:layout_goneMarginTop="64dp"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             android:paddingEnd="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_media"
-            android:textAllCaps="true"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
@@ -332,12 +280,8 @@
 
         <TextView
             android:id="@+id/tv_media_empty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
+            style="@style/TextDetailsEmptyTheme"
             android:visibility="visible"
-            android:textColor="@color/white_translucent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintTop_toBottomOf="@+id/textViewMediaTitle"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
             app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
