--- a/app/src/main/res/layout/media_grid_item.xml
+++ b/app/src/main/res/layout/media_grid_item.xml
@@ -26,7 +26,7 @@
 
     <TextView
         android:id="@+id/tv_media_name"
-        style="@style/TextDetailsMediaTheme"
+        style="@style/TextMediaTheme"
         android:layout_width="342dp"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
@@ -43,7 +43,7 @@
 
     <TextView
         android:id="@+id/tv_media_type"
-        style="@style/TextDetailsMediaTheme"
+        style="@style/TextMediaTheme"
         android:layout_width="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
