--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/action_share"
+        android:title="@string/action_share"
+        app:showAsAction="never"
+        />
+
     <item android:id="@+id/action_about"
         android:title="@string/action_about"
         android:orderInCategory="100"
