--- a/app/src/main/res/layout-w592dp-v21/activity_detail.xml
+++ b/app/src/main/res/layout-w592dp-v21/activity_detail.xml
@@ -241,6 +241,8 @@
                 android:id="@+id/tv_review_empty"
                 style="@style/TextDetailsEmptyTheme"
                 android:visibility="visible"
+                android:maxLines="2"
+                android:ellipsize="end"
                 app:layout_constraintTop_toBottomOf="@+id/textViewReviewsTitle"
                 app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
                 app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
@@ -284,6 +286,8 @@
                 android:id="@+id/tv_media_empty"
                 style="@style/TextDetailsEmptyTheme"
                 android:visibility="visible"
+                android:maxLines="2"
+                android:ellipsize="end"
                 app:layout_constraintTop_toBottomOf="@+id/textViewMediaTitle"
                 app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
                 app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
