--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -240,6 +240,8 @@
                 android:id="@+id/tv_review_empty"
                 style="@style/TextDetailsEmptyTheme"
                 android:visibility="visible"
+                android:maxLines="2"
+                android:ellipsize="end"
                 app:layout_constraintTop_toBottomOf="@+id/textViewReviewsTitle"
                 app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
                 app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
@@ -282,6 +284,8 @@
                 android:id="@+id/tv_media_empty"
                 style="@style/TextDetailsEmptyTheme"
                 android:visibility="visible"
+                android:maxLines="2"
+                android:ellipsize="end"
                 app:layout_constraintTop_toBottomOf="@+id/textViewMediaTitle"
                 app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
                 app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
