--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Wow,"
+            android:text="@string/main_no_favorite_wow"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/white_translucent"
             android:letterSpacing="0.03"
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="it's pretty empty in here..."
+            android:text="@string/main_no_favorite_empty"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/white_translucent"
             android:letterSpacing="0.03"
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:text="Fill it with your favorite movies!"
+            android:text="@string/main_no_favorite_fill"
             android:textColor="@color/white_translucent"
             android:letterSpacing="0.03"
             app:layout_constraintTop_toBottomOf="@+id/tv_no_favorite_empty"
@@ -102,7 +102,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_no_favorite_fill_up"
-            android:text="*Click the heart on a movie poster to favorite it." />
+            android:text="@string/main_no_favorite_click" />
 
 
 
