--- a/app/src/main/res/layout/movies_grid_item.xml
+++ b/app/src/main/res/layout/movies_grid_item.xml
@@ -16,8 +16,9 @@
         tools:src="@drawable/tmd_error_poster"
         android:foreground="?attr/selectableItemBackground"
         tools:ignore="ContentDescription"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <CheckBox
         android:id="@+id/checkbox_favorite"
